# ezxl

./: .clinerules  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CLAUDE.md  GEMINI.md  MANIFEST.in  README.md  cliff.toml  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements-dev.in  requirements.in  sitemap.xml
.github/instructions/: README.md
.github/instructions/languages/python/: python-development-standards.instructions.md
.github/workflows/: README_DOC.md  README_PUBLISH.md  auto-tag.yml  docs.yml  publish-pypi.yml
.hooks/: hooks-usage.md  pre-commit
.scripts/dev/: generate_architecture_graph.py  lint.py  update_version.py
1.1.1/: 404.html  index.html  sitemap.xml
1.1.1/api/: index.html
1.1.1/api/reference/: index.html
1.1.1/api/reference/pywinauto-backends/: index.html
1.1.1/api/reference/win32com-backends/: index.html
1.1.1/architecture/: index.html
1.1.1/changelog/: index.html
1.1.1/cli/: index.html
1.1.1/concepts/: index.html
1.1.1/coverage/: class_index.html  covindex.html  function_index.html  index.html  status.json  z_067d2e25b8999bf5___init___py.html  z_067d2e25b8999bf5__version_py.html  z_067d2e25b8999bf5_exceptions_py.html  z_377fb7ebdb09ce08___init___py.html  z_377fb7ebdb09ce08__converters_py.html  z_377fb7ebdb09ce08__formatters_py.html  z_49c6b8843ef45d1b___init___py.html  z_49c6b8843ef45d1b__pywintypes_compat_py.html  z_5795bcba2e5c54a7___init___py.html  z_5795bcba2e5c54a7__protocols_py.html  z_6fb5fd6c7b26d900___init___py.html
1.1.1/examples/: index.html
1.1.1/getting-started/: index.html
1.1.1/guides/: index.html
1.1.1/guides/configuration/: index.html
1.1.1/guides/development/: index.html
1.1.1/guides/testing/: index.html
1.1.1/search/: search_index.json
1.1.1/stylesheets/: extra.css
1.1.2/: 404.html  index.html  objects.inv  sitemap.xml
1.1.2/api/: index.html
1.1.2/api/reference/: index.html
1.1.2/api/reference/pywinauto-backends/: index.html
1.1.2/api/reference/win32com-backends/: index.html
1.1.2/architecture/: index.html
1.1.2/changelog/: index.html
1.1.2/cli/: index.html
1.1.2/concepts/: index.html
1.1.2/coverage/: class_index.html  covindex.html  function_index.html  index.html  status.json  z_067d2e25b8999bf5___init___py.html  z_067d2e25b8999bf5__version_py.html  z_067d2e25b8999bf5_exceptions_py.html  z_377fb7ebdb09ce08___init___py.html  z_377fb7ebdb09ce08__converters_py.html  z_377fb7ebdb09ce08__formatters_py.html  z_49c6b8843ef45d1b___init___py.html  z_49c6b8843ef45d1b__pywintypes_compat_py.html  z_5795bcba2e5c54a7___init___py.html  z_5795bcba2e5c54a7__protocols_py.html  z_6fb5fd6c7b26d900___init___py.html
1.1.2/examples/: index.html
1.1.2/getting-started/: index.html
1.1.2/guides/: index.html
1.1.2/guides/configuration/: index.html
1.1.2/guides/development/: index.html
1.1.2/guides/testing/: index.html
1.1.2/search/: search_index.json
api/: index.html
api/reference/: index.html
architecture/: index.html
changelog/: index.html
coverage/: class_index.html  covindex.html  function_index.html  index.html  status.json  z_067d2e25b8999bf5___init___py.html  z_067d2e25b8999bf5_exceptions_py.html  z_067d2e25b8999bf5_version_py.html  z_377fb7ebdb09ce08___init___py.html  z_377fb7ebdb09ce08__converters_py.html  z_377fb7ebdb09ce08__formatters_py.html  z_49c6b8843ef45d1b___init___py.html  z_5795bcba2e5c54a7___init___py.html  z_5795bcba2e5c54a7__protocols_py.html  z_6fb5fd6c7b26d900___init___py.html
docs/: architecture.md  changelog.md  coverage.md  getting-started.md  index.md
docs/api/: index.md
docs/api/reference/: index.md  pywinauto-backends.md  win32com-backends.md
docs/cli/: index.md
docs/concepts/: index.md
docs/examples/: index.md
docs/guides/: configuration.md  development.md  index.md  testing.md
examples/: index.html
getting-started/: index.html
guides/: index.html
guides/configuration/: index.html
guides/development/: index.html
guides/testing/: index.html
search/: search_index.json
src/ezxl/: __init__.py  _version.py  exceptions.py  version.py
src/ezxl/cli/: __init__.py  _console.py  main.py
src/ezxl/cli/commands/: __init__.py  _docs.py  _info.py  _version.py
src/ezxl/core/: __init__.py  _excel_app.py  _sheet.py  _workbook.py
src/ezxl/gui/: __init__.py  _gui_proxy.py  _protocols.py
src/ezxl/gui/pywinauto/: __init__.py  _backstage.py  _connect.py  _dialog.py  _imports.py  _keys.py  _menu.py  _registry.py  _ribbon.py
src/ezxl/gui/win32com/: __init__.py  _backstage.py  _dialog.py  _keys.py  _menu.py  _ribbon.py
src/ezxl/io/: __init__.py  _converters.py  _formatters.py
src/ezxl/utils/: __init__.py  _com_utils.py  _pywintypes_compat.py
tests/: __init__.py  conftest.py  run_tests.py
tests/integration/: __init__.py
tests/robustness/: __init__.py
tests/unit/: __init__.py  test_converters.py  test_exceptions.py  test_formatters.py  test_package.py  test_protocols.py
